Major updates to java N presentation